# rust_udp_chat

./: CHANGES_SUMMARY.md  Cargo.toml  DEPLOYMENT_TLS.md  Dockerfile  README.md  RELEASES.md  TLS_SETUP_SUMMARY.md  docker-compose.yml
.github/workflows/: docker-publish.yml  release.yml
chat_client/: Cargo.toml
chat_client/src/: client.rs  input.rs  logger.rs  main.rs
chat_server/: Cargo.toml
chat_server/src/: main.rs  user_connection.rs
chat_server/src/user_connection/: error.rs  handlers.rs  mod.rs  rate_limiting.rs
chat_shared/: Cargo.toml
chat_shared/src/: input.rs  lib.rs  message.rs  network.rs  udp_wrapper.rs
client/: Cargo.toml  Dockerfile
client/src/: client.rs  completer.rs  input.rs  main.rs
deploy/digital_ocean/: QUICK_START.md  README.md  setup-caddy.sh  setup-certificates.sh  start-server.sh
deploy/docker/: .dockerignore  Caddyfile  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.yml
deploy/native/: Caddyfile.native  NATIVE_DEPLOYMENT.md  install.sh  rust-chat.service
server/: Cargo.toml
server/src/: completer.rs  input.rs  main.rs
server/src/user_connection/: error.rs  handlers.rs  mod.rs
shared/src/: commands.rs  lib.rs  message.rs  network.rs  version.rs
