[workspace]
resolver = "2"
members = [ "chat_server", "chat_client", "chat_shared"]

[workspace.package]
description = "Rust Chat Application using Tokio over TCP"
edition = "2024"
version = "0.1.0"
authors = ["michael.mileusnich@gmail.com"]
readme = "README.md"

[workspace.dependencies]
chat_shared = { path = "chat_shared" }
chrono = "0.4"
colored = "2.1"
tokio = { version = "1", features = ["full"] }
rand = "0.8"