[workspace]
resolver = "2"
members = [ "server", "client", "shared"]

[workspace.package]
description = "Rust Chat Application using Tokio over TCP"
edition = "2024"
version = "0.1.10"
authors = ["michael.mileusnich@gmail.com"]
readme = "README.md"

[workspace.dependencies]
shared = { path = "shared" }
chrono = "0.4"
colored = "2.1"
tokio = { version = "1", features = ["full"] }
rand = "0.8"
rustyline = "14.0"
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "2.1"
webpki-roots = "0.26"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"