[package]
name = "chat_client"
description.workspace = true
edition.workspace = true
version.workspace = true
authors.workspace = true
readme.workspace = true

[dependencies]
chat_shared.workspace = true
chrono.workspace = true
colored.workspace = true
tokio.workspace = true
rustyline.workspace = true