[package]
name = "client"
description.workspace = true
edition.workspace = true
version.workspace = true
authors.workspace = true
readme.workspace = true

[dependencies]
shared.workspace = true
chrono.workspace = true
colored.workspace = true
tokio.workspace = true
rustyline.workspace = true
tokio-rustls.workspace = true
rustls.workspace = true
webpki-roots.workspace = true
uuid.workspace = true