[package]
name = "server"
description.workspace = true
edition.workspace = true
version.workspace = true
authors.workspace = true
readme.workspace = true

[dependencies]
shared.workspace = true
tokio.workspace = true
rand.workspace = true
rustyline.workspace = true
tokio-rustls.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
